--- a/modd.conf
+++ b/modd.conf
@@ -2,7 +2,7 @@
     prep: go test @dirmods
 }
 
-**/*.go !**/*_test.go **/*.gohtml **/*.sql{
+**/*.go !**/*_test.go **/*.gohtml {
     prep: go build -o lenslocked.exe .
     daemon +sigterm: ./lenslocked
 }
